# revolutx

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
.taska/: mutations.jsonl
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: adapter.rs  agent.rs  agentlog.rs  args.rs  commands.rs  creds.rs  datetime.rs  helper.rs  human.rs  line.rs  main.rs  oneshot.rs  output.rs  progress.rs  repl.rs  term.rs  watch.rs
common/: Cargo.toml  README.md
common/src/: config.rs  lib.rs
docs/: crate_release_process.md  design.md  openapi-inventory.md
examples/: generate_keypair.rs  get_balances.rs  market_data.rs  place_limit_order.rs  tpsl_probe.rs
mcp/: CHANGELOG.md  Cargo.toml  README.md
mcp/src/: main.rs  protocol.rs  server.rs  tools.rs
scripts/: release.sh
src/: access.rs  agent.rs  auth.rs  client.rs  config.rs  error.rs  fix.rs  keygen.rs  keystore.rs  lib.rs  transport.rs
src/api/: balances.rs  configuration.rs  market_data.rs  mod.rs  orders.rs  range.rs  trades.rs
src/commands/: command.rs  execute.rs  mod.rs  output.rs  present.rs  tests.rs
src/model/: balances.rs  common.rs  configuration.rs  market_data.rs  mod.rs  orders.rs  trades.rs
tests/: endpoints.rs  executor.rs  fixtures.rs  live_smoke.rs  spec_coverage.rs
tests/support/: mod.rs
