[package]
name = "revolutx"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Unofficial Rust SDK for the Revolut X Crypto Exchange REST API"
readme = "README.md"
repository = "https://github.com/justpresident/revolutx"
documentation = "https://docs.rs/revolutx"
keywords = ["revolut", "crypto", "exchange", "trading", "api"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
# The OpenAPI submodule (~7 MB of specs) is a test fixture source, not needed by
# downstream users; keep it and dev-only files out of the published package.
exclude = [
    ".github/",
    ".taska/",
    "AGENTS.md",
    "revolut-openapi/",
    "tests/fixtures.rs",
    "tests/spec_coverage.rs",
]

[workspace]
members = ["common", "mcp"]

[features]
default = ["rest"]
# REST API: Ed25519-signed HTTP client and the endpoint groups (the current SDK).
rest = ["dep:reqwest", "dep:ed25519-dalek", "dep:base64"]
# FIX 4.4 client (market data + trading). Not yet implemented; reserved so the
# feature/module layout is in place. See the `fix` backlog task.
fix = []

[dependencies]
# Shared, always-on: domain models, error types, (de)serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rust_decimal = { version = "1", default-features = false, features = ["std", "serde-with-str"] }
time = { version = "0.3", default-features = false, features = ["std", "parsing", "formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }
# REST-only (enabled by the `rest` feature).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "pem", "pkcs8"], optional = true }
base64 = { version = "0.22", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
