[package]
name = "revolutx"
version = "0.2.0"
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
description = "Unofficial Rust SDK for the Revolut X Crypto Exchange REST API"
readme = "README.md"
repository = "https://github.com/justpresident/revolutx"
documentation = "https://docs.rs/revolutx"
keywords = ["revolut", "crypto", "exchange", "trading", "api"]
categories = ["api-bindings", "cryptography::cryptocurrencies"]
# The OpenAPI submodule (~7 MB of specs) is a test fixture source, not needed by
# downstream users; keep it and dev-only files out of the published package.
exclude = [
    ".github/",
    ".taska/",
    "AGENTS.md",
    "revolut-openapi/",
    "tests/fixtures.rs",
    "tests/spec_coverage.rs",
]

[workspace]
members = ["cli", "mcp"]

[features]
default = ["rest"]
# REST API: Ed25519-signed HTTP client and the endpoint groups (the current SDK).
rest = ["dep:reqwest", "dep:ed25519-dalek", "dep:base64", "dep:zeroize"]
# FIX 4.4 client (market data + trading). Not yet implemented; reserved so the
# feature/module layout is in place. See the `fix` backlog task.
fix = []
# Encrypted credential vault exposed as a `Signer`. Stores credentials in
# rcypher's own `SecretStore` format (the standard format the `rcypher` CLI
# reads/writes), via its multi-factor container facade. Implies `rest`.
keystore = ["rest", "dep:rcypher", "dep:getrandom"]
# Signing-agent proxy (unix-only): a `serve()` daemon loop that owns the keystore
# and does all signing + HTTP, plus a client-side `AgentExecutor` that forwards
# `RequestSpec`s over a unix socket. Neither the private key nor the API key ever
# crosses the socket. A one-time handshake token authenticates the peer before
# the oracle is exposed. Implies `rest`.
agent = ["rest", "dep:tokio", "dep:bincode", "dep:getrandom", "dep:subtle"]

[dependencies]
# Shared, always-on: domain models, error types, (de)serialization.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rust_decimal = { version = "1", default-features = false, features = ["std", "serde-with-str"] }
time = { version = "0.3", default-features = false, features = ["std", "parsing", "formatting"] }
uuid = { version = "1", features = ["v4", "serde"] }
# REST-only (enabled by the `rest` feature).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }
ed25519-dalek = { version = "2", default-features = false, features = ["std", "pem", "pkcs8", "zeroize"], optional = true }
base64 = { version = "0.22", optional = true }
zeroize = { version = "1", optional = true }
rcypher = { version = "0.3", default-features = false, features = ["storage"], optional = true }
bincode = { version = "2", optional = true }
# OS randomness for `keystore`'s key-pair generation.
getrandom = { version = "0.3", optional = true }
# Agent proxy (enabled by the `agent` feature): unix-socket transport + framing.
tokio = { version = "1", default-features = false, features = ["net", "io-util", "rt", "time", "sync"], optional = true }
# Constant-time comparison of the agent's one-time handshake token.
subtle = { version = "2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
