[package]
name = "revolutx-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
description = "Command-line interface for the Revolut X crypto exchange"
readme = "README.md"
repository = "https://github.com/justpresident/revolutx"
keywords = ["revolut", "crypto", "exchange", "trading", "cli"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "revolutx"
path = "src/main.rs"

[features]
default = ["fido2"]
# Unlock the vault with a hardware FIDO2 security-key factor (in addition to a
# password), on by default. Build with `--no-default-features` on hosts without
# the native USB-HID build deps (libudev/hidapi + pkg-config) or for a static
# musl binary; password-only vaults still unlock. Enrolling a key (and other
# vault management) is done with the `rcypher` CLI, which reads the same format.
fido2 = ["rcypher/fido2"]

[dependencies]
revolutx = { path = "..", version = "0.2", features = ["rest", "keystore", "agent", "commands"] }
# rcypher's storage format + interactive unlock plumbing (prompts, strength gate,
# the multi-factor unlock loop). The on-disk vault is rcypher's standard format.
rcypher = { version = "0.3", default-features = false, features = ["storage", "cli"] }
clap = { version = "4", features = ["derive"] }
# A `sigprocmask` to block SIGINT for the interactive shell, so Ctrl-C doesn't
# trip the ptrace-protection watchdog (the shell stops `watch` with Enter).
libc = "0.2"
# Interactive shell line editor (the `cli` command): history, editing, and
# command/symbol autocomplete.
rustyline = "18"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "time", "signal", "macros", "sync"] }
zeroize = "1"
