[package]
name = "revolutx-common"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Shared helpers for revolutx interface crates (MCP, CLI): credential and environment configuration"
readme = "README.md"
repository = "https://github.com/justpresident/revolutx"
keywords = ["revolut", "crypto", "exchange", "config"]
categories = ["api-bindings", "config"]

[dependencies]
revolutx = { path = "..", version = "0.1", default-features = false, features = ["rest"] }
thiserror = "2"
