[package]
name = "revolutx-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Model Context Protocol (MCP) server exposing the Revolut X crypto exchange to LLM clients"
readme = "README.md"
repository = "https://github.com/justpresident/revolutx"
keywords = ["revolut", "crypto", "mcp", "trading", "exchange"]
categories = ["api-bindings", "command-line-utilities"]

[[bin]]
name = "revolutx-mcp"
path = "src/main.rs"

[dependencies]
revolutx = { path = "..", version = "0.2", features = ["rest", "agent"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
