[package]
name = "revolutx-mcp"
version = "0.3.1"
edition = "2024"
rust-version = "1.87"
license = "Apache-2.0"
description = "Model Context Protocol (MCP) server exposing the Revolut X crypto exchange to LLM clients"
readme = "README.md"
repository = "https://github.com/justpresident/revolutx"
keywords = ["revolut", "crypto", "mcp", "trading", "exchange"]
categories = ["api-bindings", "command-line-utilities"]

[[bin]]
name = "revolutx-mcp"
path = "src/main.rs"

[dependencies]
revolutx = { path = "..", version = "0.5.1", features = ["rest", "agent", "commands"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# A live in-process agent (AgentServer) over a throwaway socket exercises the
# interactive-authorization path end to end.
tempfile = "3"
tokio = { version = "1", features = ["time"] }
